# scbkr-local-responsibility-model

./: .env.example  .gitignore  README.md  README_EN.md  RELEASE_NOTES.md  package.json  pyproject.toml
config/: database.config.json  model.config.json  permission.config.json  product_manifest.json  ui.config.json
core/: __init__.py  product_manifest.py  runtime_settings.py
docs/: GITHUB_METADATA.md  INSTALL_WINDOWS.md  LOCAL_MODEL_SETUP.md  MOBILE_COMPANION.md  PRIVACY_AND_SECURITY.md  README.md  ROADMAP.md  RULEPACK_AUTHORING.md  SCBKR_2_1_LAUNCH_SETUP.md  SCBKR_2_3_CHAT_FIRST_ALIGNMENT_AUDIT.md  SCBKR_MASTER_PLAN_FINAL.md  api_spec.md  app_mvp_acceptance.md  architecture.md  codex_construction_steps.md  database_spec.md  desktop_runtime.md  review_failed_memory_rule.md  scbkr_workflow.md  tech_stack_lock.md
kernel_pack/: scbkr_kernel_pack.json
reports/: product_noise_cleanup_report.md  token_cost_audit_report.md
schemas/: corpus.schema.json  evidence_packet.schema.json  ledger.schema.json  logic.schema.json  memory.schema.json  model_settings.schema.json  permission_settings.schema.json  product_manifest.schema.json  review.schema.json  review_failed_rule.schema.json  rule.schema.json  rulepack.schema.json  scbkr.schema.json  storage_request.schema.json  task.schema.json  task_understanding.schema.json  token_efficiency.schema.json  tool_gate_result.schema.json  vector_case.schema.json
scripts/: build_api_sidecar_windows.ps1  build_desktop_preview_windows.ps1  build_desktop_release_windows.ps1  check_2_1_launch_readiness.ps1  check_api_base_matrix.mjs  clean_product_noise.py  dev.sh  generate_tauri_preview_icon.py  run_ui_acceptance_windows.ps1  scbkr_api_sidecar.spec  setup.sh  smoke_api_sidecar_windows.ps1  smoke_desktop_release_windows.ps1  smoke_lan_companion_windows.ps1  smoke_p14c_preview_windows.ps1  start_lan_companion_windows.ps1  start_ui_review_windows.ps1  test.sh
(+196 files in other folders)
