[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scbkr-local-responsibility-model"
version = "0.12.0"
description = "SCBKR local responsibility chain model MVP Web App"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps*",
  "core*",
  "config*",
  "schemas*",
]
exclude = [
  "data*",
  "dist*",
  "tests*",
  "apps.web*",
  "apps.desktop*",
  "node_modules*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
