[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scbkr-local-responsibility-model"
version = "2.1.0"
description = "SCBKR local-first rule OS and AI chat product"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps*",
  "core*",
  "config*",
  "schemas*",
]
exclude = [
  "data*",
  "dist*",
  "tests*",
  "apps.web*",
  "apps.desktop*",
  "node_modules*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
